--- a/Back/src/ProEventos.API/appsettings.Development.json
+++ b/Back/src/ProEventos.API/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
+  "ConnectionStrings": {
+    "Default" : "Data Source=ProEventos.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
